--- a/package.json
+++ b/package.json
@@ -1,24 +1,30 @@
 {
-  "name": "diabetes",
-  "version": "0.1.0",
-  "private": true,
-  "scripts": {
-    "dev": "next dev",
-    "build": "next build",
-    "start": "next start",
-    "lint": "next lint"
-  },
-  "dependencies": {
-    "react": "^19.0.0",
-    "react-dom": "^19.0.0",
-    "next": "15.1.0"
-  },
-  "devDependencies": {
-    "typescript": "^5",
-    "@types/node": "^20",
-    "@types/react": "^19",
-    "@types/react-dom": "^19",
-    "postcss": "^8",
-    "tailwindcss": "^3.4.1"
-  }
+ "name": "diabetes",
+ "version": "0.1.0",
+ "private": true,
+ "scripts": {
+  "dev": "next dev",
+  "build": "next build",
+  "start": "next start",
+  "lint": "next lint"
+ },
+ "dependencies": {
+  "@libsql/client": "^0.14.0",
+  "dotenv": "^16.4.7",
+  "drizzle-orm": "^0.36.4",
+  "next": "15.1.0",
+  "next-auth": "^5.0.0-beta.25",
+  "react": "^19.0.0",
+  "react-dom": "^19.0.0"
+ },
+ "devDependencies": {
+  "@types/node": "^20",
+  "@types/react": "^19",
+  "@types/react-dom": "^19",
+  "drizzle-kit": "^0.28.0",
+  "postcss": "^8",
+  "tailwindcss": "^3.4.1",
+  "tsx": "^4.19.2",
+  "typescript": "^5"
+ }
 }
